--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,13 @@ packages = [{include = "llm_zoomcamp_damon", from ="src"}]
 
 [tool.poetry.dependencies]
 python = ">=3.10, <4.0"
+tqdm = "^4.67.1"
+notebook="^7.1.2"
+elasticsearch="^8.13.0"
+openai = "^1.82.1"
+pandas = "^2.2.3"
+scikit-learn = "^1.6.1"
+ipywidgets = "^8.1.7"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.5.0"
