--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ openai = "^1.82.1"
 pandas = "^2.2.3"
 scikit-learn = "^1.6.1"
 ipywidgets = "^8.1.7"
+tiktoken = "^0.9.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.5.0"
