--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,10 @@ pandas = "^2.2.3"
 scikit-learn = "^1.6.1"
 ipywidgets = "^8.1.7"
 tiktoken = "^0.9.0"
+transformers = "^4.52.4"
+torch = "^2.7.0"
+torchvision = "^0.22.0"
+torchaudio = "^2.7.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.5.0"
