--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,8 @@ transformers = "^4.52.4"
 torch = "^2.7.0"
 torchvision = "^0.22.0"
 torchaudio = "^2.7.0"
-qdrant-client = "^1.14.2"
+qdrant-client = {version = ">=1.14.2", extras = ["fastembed"]}
+
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.5.0"
